--- a/First party - Capstone Project - The Battle of Neighborhoods (Week 1).ipynb
+++ b/First party - Capstone Project - The Battle of Neighborhoods (Week 1).ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:justify;\"> As a data scientist in a consulting company, I support companies in **decision-making** through the processing, exploitation, modeling and visualization of data to respond as best as possible to the **different business needs and above all optimally**. It was in this context that one day I was assigned to the R&D department of a large fast food brand XYZ to provide them with my expertise.\n",
+    "<p style=\"text-align:justify;\"> As a data scientist in a consulting company, I support companies in **decision-making** through the processing, exploitation, modeling and visualization of data to **respond as best as possible to the different business needs and above all optimally**. It was in this context that one day I was assigned to the R&D department of a large fast food brand XYZ to provide them with my expertise.\n",
     "The latter wishes to increase its market share and expand its business through a short and medium term investment plan in different countries. To do so, it aims\n",
     "at first, certain financial capitals more precisely New York and Toronto on their territory. She wishes to know in simple terms:</p>\n",
     "        \n",
