--- a/First party - Capstone Project - The Battle of Neighborhoods (Week 1).ipynb
+++ b/First party - Capstone Project - The Battle of Neighborhoods (Week 1).ipynb
@@ -49,7 +49,7 @@
     "- visualization library, <a href=\"#item1\">Folium</a>, to visualize the results.\n",
     "\n",
     "\n",
-    "Now that the problem is posed as well as the objectives, we move on to the description of the data\n",
+    "Now that the problem is posed as well as the objectives, we move on to the description of the data.\n",
     "\n"
    ]
   },
@@ -102,6 +102,11 @@
     "\n",
     "4. After this,I used Forsquare API to get the most common venues of given Neighborhoods in Toronto and New York \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
