--- a/First party - Capstone Project - The Battle of Neighborhoods (Week 1).ipynb
+++ b/First party - Capstone Project - The Battle of Neighborhoods (Week 1).ipynb
@@ -97,8 +97,19 @@
     "\n",
     " https://github.com/iamadouhassane/-Coursera_ML_Capstone_week_4/blob/master/NewYork_and_Canada_data_preprocessing.ipynb\n",
     " \n",
-    "4. After this,I used Forsquare API to get the most common venues of given Neighborhoods in Toronto and New York \n"
+    "4. After this,I used Forsquare API to get the most common venues of given Neighborhoods in Toronto and New York \n",
+    "\n",
+    "All the results of this project **:** plot, file or  data set as I said will be available on my github account. Progressively,\n",
+    "I will indicates where are their repertories . \n",
+    "it is the end of this section which leads us to the part of the methodology\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
