--- a/First party - Capstone Project - The Battle of Neighborhoods (Week 1).ipynb
+++ b/First party - Capstone Project - The Battle of Neighborhoods (Week 1).ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##     Clustering Neighborhoods in both New York and Toronto cities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## <div align=\"center\">Introduction</div>"
    ]
   },
