--- a/NewYork_and_Canada_data_preprocessing.ipynb
+++ b/NewYork_and_Canada_data_preprocessing.ipynb
@@ -328,10 +328,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Neighborhood</th>\n",
+       "      <th>Postal Code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bronx</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>40.894705</td>\n",
+       "      <td>-73.847201</td>\n",
+       "      <td>Wakefield</td>\n",
+       "      <td>XXX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bronx</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>40.874294</td>\n",
+       "      <td>-73.829939</td>\n",
+       "      <td>Co-op City</td>\n",
+       "      <td>XXX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bronx</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>40.887556</td>\n",
+       "      <td>-73.827806</td>\n",
+       "      <td>Eastchester</td>\n",
+       "      <td>XXX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bronx</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>40.895437</td>\n",
+       "      <td>-73.905643</td>\n",
+       "      <td>Fieldston</td>\n",
+       "      <td>XXX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bronx</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>40.890834</td>\n",
+       "      <td>-73.912585</td>\n",
+       "      <td>Riverdale</td>\n",
+       "      <td>XXX</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Borough      City   Latitude  Longitude Neighborhood Postal Code\n",
+       "0   Bronx  New York  40.894705 -73.847201    Wakefield         XXX\n",
+       "1   Bronx  New York  40.874294 -73.829939   Co-op City         XXX\n",
+       "2   Bronx  New York  40.887556 -73.827806  Eastchester         XXX\n",
+       "3   Bronx  New York  40.895437 -73.905643    Fieldston         XXX\n",
+       "4   Bronx  New York  40.890834 -73.912585    Riverdale         XXX"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "New_york_and_Toronto_data_final.head()"
+   ]
   },
   {
    "cell_type": "code",
